# MPASdiag

./: .codecov.yml  .coverage.MRs-MacBook-Pro.local.10509.Xnezgsfx  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_MIGRATION.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TEST_RESULTS.md  conftest.py  environment.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/grids/: x1.40962.init.nc  x1.40962.static.nc
examples/: README.md  analyze_benchmarks.py  benchmark.py  example_3d_variable_slice.py  example_cross_section.py  example_ivt_map.py  example_overlay_surface_and_wind.py  example_overlay_surface_contourf_and_contour.py  example_precipitation_map.py  example_surface_map.py  example_wind_map.py  generate_complex_weather_map.py  generate_skewt_plot.py  generate_surface_plots.py  generate_surface_plots_contour.py  generate_surface_plots_filled_contour.py  generate_surface_plots_scatter.py  generate_vertical_cross_section.py  generate_wind_plots.py  inspect_vertical_debug.py  precipitation_examples.py  remap_mpas_data.py  surface_examples.py  wind_examples.py
logs/: build_log_macos_latest_python_3p10_20260103T0103.txt  build_log_ubuntu_latest_python_311_20260103T0032.txt  build_log_ubuntu_latest_python_3_10_20260103T0014.txt
mpas_analysis/: __init__.py  cli.py  data_processing.py  utils.py  visualization.py
mpasdiag/: __init__.py  __main__.py  cli.py
mpasdiag/diagnostics/: __init__.py  moisture_transport.py  precipitation.py  sounding.py  thermodynamic.py  wind.py
mpasdiag/processing/: __init__.py  base.py  cli_unified.py  constants.py  data_cache.py  parallel.py  parallel_wrappers.py  processors_2d.py  processors_3d.py  remapping.py  utils_config.py  utils_datetime.py  utils_file.py  utils_geog.py  utils_logger.py  utils_metadata.py  utils_monitor.py  utils_parser.py  utils_path.py  utils_unit.py  utils_validator.py
mpasdiag/visualization/: __init__.py  base_visualizer.py  cross_section.py  precipitation.py  skewt.py  styling.py  surface.py  wind.py
tests/: __init__.py  conftest.py  test_axis_modifications.py  test_class_refactoring.py  test_cli_crosssection.py  test_cli_entry_point.py  test_cli_workers_integration.py  test_coordinates.py  test_coverage.csv  test_cross_section.py  test_data_cache.py  test_data_helpers.py  test_data_processing.py  test_enhanced_surface_plotting.py  test_enhancements.py  test_functional.py  test_grid_cache.py  test_module_imports.py  test_mpas_analysis.py  test_multiprocessing_backend.py  test_parallel_timing.py  test_precipitation_plotter.py  test_remapping.py  test_unit_conversion.py  test_utils.py  test_vertical_cross_section.py  test_visualization.py
tests/cli/: test_cli_aliases.py  test_cli_analysis.py  test_cli_analysis_with_logger.py  test_cli_arguments.py  test_cli_batch.py  test_cli_config.py  test_cli_coverage.py  test_cli_entry_point.py  test_cli_errors.py  test_cli_integration.py  test_cli_logging.py  test_cli_module.py  test_cli_overlay.py  test_cli_sounding.py  test_cli_utilities.py
tests/diagnostics/: test_diagnostics_integration.py  test_moisture_transport_coverage.py  test_moisture_transport_diagnostics.py  test_precipitation_diag_coverage.py  test_precipitation_diagnostics.py  test_sounding_coverage.py  test_sounding_diagnostics.py  test_sounding_gap_coverage.py  test_sounding_outer_excepts.py  test_thermodynamic_diagnostics.py  test_wind_diagnostics.py  test_wind_diagnostics_coverage.py
tests/integration/: conftest.py  test_diagnostics_pipeline.py  test_end_to_end.py  test_example_with_real_data.py  test_mpas_analysis.py  test_processing_pipeline.py  test_visualization_pipeline.py
tests/processing/: conftest.py  mock_dataset_helpers.py  test_2d_processor.py  test_2d_processor_coverage.py  test_3d_processor.py  test_3d_processor_coordinates.py  test_3d_processor_coverage.py  test_3d_processor_data.py  test_3d_processor_edge_cases.py  test_3d_processor_gap_coverage.py  test_3d_processor_pressure.py  test_3d_processor_vertical.py  test_base_coverage.py  test_data_cache.py  test_data_cache_coverage.py  test_data_processing.py  test_logger.py  test_parallel.py  test_parallel_core.py  test_parallel_distribution.py  test_parallel_execution.py  test_parallel_mpi.py  test_parallel_task_distributor.py  test_parallel_utilities.py  test_parallel_wrappers.py  test_parallel_wrappers_exceptions.py  test_parallel_wrappers_mpi.py  test_parallel_wrappers_processors.py  test_parallel_wrappers_workers.py  test_processing_init.py  test_remapping_core.py  test_remapping_coverage.py  test_remapping_edge_cases.py  test_remapping_integration.py  test_remapping_mpas_remapper.py  test_remapping_processors.py  test_security_limits.py  test_unit_conversion.py  test_utils.py  test_utils_config.py  (+7 more)
tests/visualization/: cross_section_test_helpers.py  test_base_visualizer.py  test_base_visualizer_coverage.py  test_cross_section_axis.py  test_cross_section_batch.py  test_cross_section_core.py  test_cross_section_coverage.py  test_cross_section_edge_cases.py  test_cross_section_integration.py  test_cross_section_interpolation.py  test_cross_section_levels.py  test_cross_section_plotting.py  test_cross_section_render_paths.py  test_cross_section_time.py  test_cross_section_validation.py  test_enhanced_surface.py  test_precipitation_coverage.py  test_precipitation_plotter.py  test_skewt.py  test_skewt_coverage.py  test_styling_core.py  test_styling_coverage.py  test_styling_edge_cases.py  test_surface_batch.py  test_surface_coverage.py  test_surface_data.py  test_surface_layout.py  test_surface_overlay.py  test_surface_plots.py  test_visualization_wind.py  test_viz_integration.py  test_viz_specifications.py  test_wind_core.py  test_wind_coverage.py  test_wind_data_prep.py  test_wind_overlay_batch.py  test_wind_rendering.py  wind_test_helpers.py
(+9 files in other folders)
