[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpasdiag"
version = "1.0.0"
authors = [
    {name = "Rubaiat Islam", email = "mrislam@ucar.edu"},
]
description = "Python package for MPAS model output analysis and visualization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = [
    "MPAS",
    "atmospheric modeling",
    "unstructured mesh",
    "precipitation analysis",
    "visualization",
    "meteorology",
    "climate modeling",
    "weather prediction",
]
dependencies = [
    # Lower bounds are deliberately set above the newest *known-vulnerable* release
    # of each security-relevant dependency (audit finding MPAS-003). CI installs the
    # latest versions, so these floors only constrain the minimum a user may resolve.
    "numpy>=1.22.0",          # >=1.22 clears CVE-2021-33430/34141/41495/41496
    "scipy>=1.8.0",
    "xarray>=0.19.0",
    "pandas>=1.4.0",
    # matplotlib capped <3.11: cartopy<=0.25.0 is incompatible with matplotlib 3.11
    "matplotlib>=3.5.0,<3.11",
    "cartopy>=0.21.0",
    "netCDF4>=1.6.0",         # bundles patched libhdf5/libnetcdf (MPAS-001)
    "h5netcdf>=1.1.0",
    "dask>=2021.10.0",        # >=2021.10.0 clears CVE-2021-42343 (distributed RCE)
    "numba>=0.55.0",
    "llvmlite>=0.38.0",
    "mpi4py>=3.1.0",
    "uxarray>=2024.01.0",
    "PyYAML>=6.0",            # loading uses yaml.safe_load; floor raised for hygiene
    "psutil>=5.8.0",          # >=5.6.6 clears CVE-2019-18874 (double free)
    "metpy>=1.4.0",
]

[project.optional-dependencies]
esmf = [
    "esmpy>=8.4.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-xdist>=2.5.0",
    "pytest-mock>=3.6.0",
    "pluggy>=1.0.0",
    "coverage>=6.0",
    "execnet>=1.9.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=1.15.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    # Security tooling (audit finding MPAS-004)
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]
performance = [
    "bottleneck>=1.3.0",
]
plotting = [
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

[project.scripts]
mpasdiag = "mpasdiag.cli:main"

[project.urls]
"Homepage" = "https://github.com/mrixlam/MPASdiag"
"Bug Reports" = "https://github.com/mrixlam/MPASdiag/issues"
"Source" = "https://github.com/mrixlam/MPASdiag"
"Documentation" = "https://github.com/mrixlam/MPASdiag#readme"

[tool.uv.sources]
# esmpy is not published on PyPI for all Python versions, so it is fetched from the
# upstream ESMF repository. The ref is PINNED to an immutable release tag (audit
# finding MPAS-002): an unpinned default-branch checkout would execute arbitrary,
# non-reproducible upstream build code at install time. Bump deliberately and
# re-verify when upgrading. Prefer `conda install -c conda-forge esmpy` where possible.
esmpy = { git = "https://github.com/esmf-org/esmf", subdirectory = "src/addon/esmpy", rev = "v8.9.1" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mpasdiag*"]

[tool.setuptools.package-data]
mpasdiag = ["py.typed"]

[tool.setuptools.dynamic]
# Keep this empty since we're using static configuration

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mpasdiag"]

[tool.ruff.lint.per-file-ignores]
"examples/benchmark.py" = ["E402"]
"mpasdiag/__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv --strict-markers --ignore-glob=*_old*.py"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::RuntimeWarning:.*importlib.*",
    "ignore:numpy.ndarray size changed.*:RuntimeWarning",
    "ignore:.*numpy.ndarray.*:RuntimeWarning",
    "ignore:Mean of empty slice:RuntimeWarning",
    "ignore:All-NaN slice encountered:RuntimeWarning",
    "ignore:Degrees of freedom <= 0:RuntimeWarning",
    "ignore:This process.*is multi-threaded.*:DeprecationWarning",
    "ignore:facecolor will have no effect.*:UserWarning",
    "ignore:Using dimensions.*from data variable.*:UserWarning",
    "ignore:Behaviour of argmin/argmax.*:DeprecationWarning",
    "ignore:invalid value encountered in create_collection:RuntimeWarning",
    "ignore:.*found in sys.modules after import of package.*:RuntimeWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["pytest", "_pytest.*"]
follow_imports = "normal"
ignore_missing_imports = false
